Prevent hidden text on mobile

--- a/css/canvas-text-boxes.css
+++ b/css/canvas-text-boxes.css
@@ -74,4 +74,8 @@
     margin: 0;
     font-size: 19px;
   }
+
+  .text-overlay-preview{
+    opacity: 0;
+  }
 }
